--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-validator</artifactId>
+    </dependency>
 
     <!-- DEPENDENCIAS DE TESTES -->
     <dependency>
