application.properties - Ajustes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,27 @@
 
+###################################################################################################
+# Configuracoes em geral
+#####################################################################################################
+
+quarkus.application.name=Microsserviço de Benefícios
+quarkus.application.ui-header=${quarkus.application.name} (distribuído por Cresol)
+
+quarkus.locales=pt-BR
+
+
 
 #####################################################################################################
-# Bases de dados
+# HTTP / SSL
 #####################################################################################################
+
+quarkus.http.port=8080
+%test.quarkus.http.port=8090
+
+
+
+# #################################################################################################
+# Bases de dados
+# #################################################################################################
 
 ## DEFAULT ******************************************************************************************
 quarkus.datasource.db-kind=h2
@@ -13,5 +32,4 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.database.generation.halt-on-error=false
 quarkus.hibernate-orm.database.charset=UTF8
 quarkus.hibernate-orm.log.sql=true
-
 
