Ajustes no diretórios da annotation

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -2,4 +2,4 @@
 # Mensagens padrão dos validadores customizados
 # #################################################################################################
 
-com.jeanbarcellos.demo.validation.CategoryCheck.message=é inválido
+com.jeanbarcellos.demo.validation.annotation.CategoryCheck.message=é inválido
