--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 # Configuracoes em geral
 #####################################################################################################
 
-quarkus.application.name=Microsserviço de Benefícios
-quarkus.application.ui-header=${quarkus.application.name} (distribuído por Cresol)
+quarkus.application.name=Microsserviço DEMO
+quarkus.application.ui-header=${quarkus.application.name} (distribuído por Jean Barcellos)
 
 quarkus.locales=pt-BR
 
@@ -14,8 +14,8 @@ quarkus.locales=pt-BR
 # HTTP / SSL
 #####################################################################################################
 
-quarkus.http.port=8080
-%test.quarkus.http.port=8090
+quarkus.http.port=8081
+%test.quarkus.http.port=8091
 
 
 
@@ -31,5 +31,5 @@ quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.database.generation.halt-on-error=false
 quarkus.hibernate-orm.database.charset=UTF8
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
 
