validation - Criação do Validator e Annotation para checagem do Tipo

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -3,3 +3,4 @@
 # #################################################################################################
 
 com.jeanbarcellos.demo.validation.annotation.CategoryCheck.message=é inválido
+com.jeanbarcellos.demo.validation.annotation.TypeCheck.message=é inválido
