Criação da Annotation/Validator FieldMatch

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,6 +1,17 @@
 # #################################################################################################
-# Mensagens padrão dos validadores customizados
+# Mensagens padrão dos validadores
 # #################################################################################################
 
+
+# Validações do Javax
+javax.validation.constraints.NotNull.message=deve ser nulo ou estar vazio
+javax.validation.constraints.Email.message=deve ser um endereço de e-mail válido
+javax.validation.constraints.Size.message=deve possuir tamanho entre {min} e {max}
+
+
+# Validações do projeto
 com.jeanbarcellos.demo.validation.annotation.CategoryCheck.message=é inválido
 com.jeanbarcellos.demo.validation.annotation.TypeCheck.message=é inválido
+com.jeanbarcellos.demo.validation.annotation.FieldMatch.message=devem possuir valores iguais
+
+com.jeanbarcellos.demo.validation.annotation.ConsistentDateParameters.message=é inválido
