--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,16 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
     </dependency>
+    <!-- <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-beanutils2</artifactId>
+      <version>2.0.0</version>
+    </dependency> -->
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.9.4</version>
+    </dependency>
 
     <!-- DEPENDENCIAS DE TESTES -->
     <dependency>
@@ -172,4 +182,18 @@
       </properties>
     </profile>
   </profiles>
+
+  <distributionManagement>
+    <repository>
+      <id>cresol.archiva.internal</id>
+      <name>Internal Release Repository</name>
+      <url>http://archiva.cresolconfederacao.com.br:9015/repository/internal/</url>
+    </repository>
+    <snapshotRepository>
+      <id>cresol.archiva.snapshots</id>
+      <name>Internal Snapshot Repository</name>
+      <url>http://archiva.cresolconfederacao.com.br:9015/repository/snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
 </project>
