--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -4,7 +4,8 @@
 
 
 # Validações do Javax
-javax.validation.constraints.NotNull.message=deve ser nulo ou estar vazio
+javax.validation.constraints.NotNull.message=não deve ser nulo
+javax.validation.constraints.NotEmpty.message=deve ser nulo ou estar vazio
 javax.validation.constraints.Email.message=deve ser um endereço de e-mail válido
 javax.validation.constraints.Size.message=deve possuir tamanho entre {min} e {max}
 
@@ -13,5 +14,7 @@ javax.validation.constraints.Size.message=deve possuir tamanho entre {min} e {ma
 com.jeanbarcellos.demo.validation.annotation.CategoryCheck.message=é inválido
 com.jeanbarcellos.demo.validation.annotation.TypeCheck.message=é inválido
 com.jeanbarcellos.demo.validation.annotation.FieldMatch.message=devem possuir valores iguais
+com.jeanbarcellos.demo.validation.annotation.Equals.message=deve poussir o valor igual a XTP
+
 
 com.jeanbarcellos.demo.validation.annotation.ConsistentDateParameters.message=é inválido
